# tx-lang-cxx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_building.md  README_dependencies.md  README_docker.md  conanfile.txt
.github/: FUNDING.yml
configured_files/: CMakeLists.txt  config.hpp.in
doc/: index.md  index.rst  syntax.md  syntax.rst  values.md
editors/vim/: README.md
editors/vim/ftdetect/: tx.vim
editors/vim/ftplugin/: tx.vim
editors/vim/syntax/: tx.vim
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp  fuzz_tester.cxx
scripts/: CMakeLists.txt  run_tests.py  run_tests_wren.py
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  constexpr_tests.cxx  tests.cpp
test/tx/: precedence.tx  unexpected_character.tx
test_suite/: CMakeLists.txt
test_suite/benchmark/: equality.tx  fib.tx  string_equality.tx
test_suite/language/: unexpected_character.tx
test_suite/language/assignment/: associativity.tx  block.tx  empty_block.tx  function.tx  global.tx  grouping.tx  if.tx  infix_operator.tx  literal.tx  local.tx  loop.tx  prefix_operator.tx  syntax.tx  undefined.tx
test_suite/language/benchmark/: equality.tx  fib.tx
test_suite/language/block/: empty.tx  expr.tx  scope.tx
test_suite/language/bool/: equality.tx  not.tx
test_suite/language/break/: out_of_loop.tx
test_suite/language/call/: bool.tx  nil.tx  num.tx  string.tx
test_suite/language/closure/: assign_to_closure.tx  assign_to_const.tx  assign_to_shadowed_later.tx  close_over_function_parameter.tx  close_over_later_variable.tx  closed_closure_in_function.tx  nested_closure.tx  open_closure_in_function.tx  reference_closure_multiple_times.tx  reuse_closure_slot.tx  shadow_closure_with_local.tx  unused_closure.tx  unused_later_closure.tx
test_suite/language/comments/: line_at_eof.tx  unicode.tx
test_suite/language/continue/: out_of_loop.tx
test_suite/language/expressions/: evaluate.tx
test_suite/language/float/: decimal_point_at_eof.tx  leading_dot.tx  literals.tx  nan_equality.tx  out_of_range.tx  trailing_dot.tx  unterminated.tx
test_suite/language/function/: body_must_be_block.tx  empty_body.tx  expr.tx  extra_arguments.tx  local_mutual_recursion.tx  missing_arguments.tx  missing_comma_in_parameters.tx  mutual_recursion.tx  nested_call_with_arguments.tx  parameters.tx  print.tx  recursion.tx  too_many_arguments.tx  too_many_parameters.tx
test_suite/language/if/: else.tx  else_body_must_be_block.tx  else_if.tx  expr.tx  fn_in_condition.tx  fn_in_else.tx.skip  fn_in_then.tx.skip  if.tx  if_body_must_be_block.tx  truth.tx  var_in_condition.tx  var_in_else.tx.skip  var_in_then.tx.skip
test_suite/language/int/: literals.tx  out_of_range.tx
test_suite/language/limit/: loop_too_large.tx  many_constants.tx  no_reuse_constants.tx.skip  stack_overflow.tx  too_many_constants.tx.skip  too_many_locals.tx
test_suite/language/logical_operator/: and.tx  and_truth.tx  or.tx  or_truth.tx
test_suite/language/loop/: missing_semicolon_after_break.tx  missing_semicolon_after_break_expr.tx  return_closure.tx  return_closure.tx.skip  return_inside.tx  syntax.tx
test_suite/language/native/: assert.tx  assert_runtime_error.tx  extra_arguments.tx.skip  missing_arguments.tx  missing_comma_in_parameters.tx  wrong_parameter_type.tx
test_suite/language/nil/: literal.tx
test_suite/language/print/: missing_argument.tx.skip
test_suite/language/return/: after_else.tx  after_if.tx  after_while.tx  at_top_level.tx  in_function.tx  return_nil_if_no_value.tx
test_suite/language/string/: error_after_multiline.tx  escape_unicode.tx  interpolation_syntax_error.tx  literals.tx  multiline.tx  unterminated.tx  unterminated_raw.tx
test_suite/language/variable/: collide_with_parameter.tx  collide_with_parameter.tx.skip  duplicate_local.tx  duplicate_parameter.tx  early_bound.tx  forward_declare_global.tx  foward_declare_global.tx  in_middle_of_block.tx  in_nested_block.tx  let_global.tx  let_local.tx  redeclare_global.tx  redefine_global.tx  scope_reuse_in_different_blocks.tx  shadow_and_local.tx  shadow_global.tx  shadow_local.tx  undefined_global.tx  undefined_local.tx  uninitialized.tx  unreached_undefined.tx  use_false_as_var.tx  use_global_before_definition.tx  use_global_in_initializer.tx  use_local_in_initializer.tx  use_nil_as_var.tx  use_self_as_var.tx
test_suite/language/while/: closure_in_body.tx.skip  closure_in_condition.tx  closure_in_condition.tx.skip  fn_in_condition.tx  fun_in_body.tx.skip  fun_in_condition.tx  return_closure.tx  return_closure.tx.skip  return_inside.tx  syntax.tx  var_in_body.tx.skip  var_in_condition.tx
tx-cli/: CMakeLists.txt
tx-cli/src/: main.cxx
tx-runtime/: CMakeLists.txt
tx-runtime/configured_files/: CMakeLists.txt  config.hxx.in
tx-runtime/include/tx/: chunk.hxx  common.hxx  compiler.hxx  compiler_inl.hxx  debug.hxx  debug_inl.hxx  dyn_array.hxx  exit_codes.hxx  fixed_array.hxx  formatting.hxx  hash.hxx  hash_map.hxx  hash_murmur.hxx  hash_set.hxx  memory.hxx  memory_inl.hxx  object.hxx  object_inl.hxx  opcodes.inc  scanner.hxx  scanner_inl.hxx  table.hxx  table_inl.hxx  tokens.inc  tx.hxx  type.hxx  type_inl.hxx  type_traits.hxx  unicode.hxx  utils.hxx  value.hxx  value_inl.hxx  vm.hxx  vm_inl.hxx
