find_package(fmt CONFIG REQUIRED)
find_package(Microsoft.GSL CONFIG REQUIRED)

add_library(
  tx-runtime
  INTERFACE
    include/tx/chunk.hxx
    include/tx/common.hxx
    include/tx/compiler.hxx
    include/tx/debug.hxx
    include/tx/dyn_array.hxx
    include/tx/exit_codes.hxx
    include/tx/fixed_array.hxx
    include/tx/hash.hxx
    include/tx/hash_map.hxx
    include/tx/memory.hxx
    include/tx/object.hxx
    include/tx/scanner.hxx
    include/tx/table.hxx
    include/tx/type_traits.hxx
    include/tx/utils.hxx
    include/tx/value.hxx
    include/tx/vm.hxx
    # 
    include/tx/compiler_inl.hxx
    include/tx/debug_inl.hxx
    include/tx/memory_inl.hxx
    include/tx/object_inl.hxx
    include/tx/scanner_inl.hxx
    include/tx/value_inl.hxx
    include/tx/vm_inl.hxx
    #
    include/tx/tx.hxx
    #
    include/tx/opcodes.inc
)
target_link_libraries(
  tx-runtime
  INTERFACE
    project_options
    project_warnings
    fmt::fmt-header-only
    Microsoft.GSL::GSL
)
target_include_directories(
  tx-runtime
  INTERFACE
    "$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include>"
    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
)
add_subdirectory(configured_files)
